Second Commit - Added Comment header and the required images for later

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Author: Hrigdev Thapa
+Student ID:100973032
+Purpose: To create a creepy-crawlies splash page using HTML and CSS.
+Date : 2025 -10-5 -->
 <!doctype html>
 <html lang="en">
   <head>
