Third commit - this is the third commit with added header video with first two images of bugs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@ Date : 2025 -10-5 -->
       <section>
         <h1>Creepy-crawlies splash page!</h1>
 
+        <!-- Added header video -->
+        <video autoplay muted loop preload="auto">
+          <source src="bug_video_640.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+
         <p>
           In casual language, people use “bugs” to mean all sorts of small
           creepy-crawlies: insects, spiders, etc. However, “Bugs” (true bugs)
@@ -36,6 +42,10 @@ Date : 2025 -10-5 -->
     <main>
       <section id="beetles">
         <h2>Beetles (Coleoptera)</h2>
+        <figure>
+          <img src="beetle.png" alt="A beetle with hard outer wings" width="250" height="180" />
+          <figcaption>A close-up of a beetle showing its protective elytra.</figcaption>
+        </figure>
 
         <p>
           Beetles make up the largest order of insects, with more than
@@ -65,6 +75,10 @@ Date : 2025 -10-5 -->
       </section>
       <section id="true_bugs">
         <h2>True Bugs (Hemiptera)</h2>
+        <figure>
+          <img src="true_bug.jpg" alt="A true bug on a plant" width="250" height="180" />
+          <figcaption>A true bug displaying its piercing-sucking mouthparts.</figcaption>
+        </figure>
 
         <p>
           True bugs include a wide range of insects such as stink bugs,
