Fourth Commit - This is the fourth commit with all the pictures if the insects and their emoji in the title

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ Date : 2025 -10-5 -->
     <header>
       <nav>
         <ul>
-          <li><a href="#beetles">Beetles</a></li>
-          <li><a href="#true_bugs">True bugs</a></li>
-          <li><a href="#butterflies_moths">Butterflies and moths</a></li>
-          <li><a href="#flies_mosquitos">Flies and mosquitos</a></li>
-          <li><a href="#bees_wasps_ants">Bees, wasps, and ants</a></li>
-          <li><a href="#spiders">Spiders</a></li>
+          <li><a href="#beetles">🪲 Beetles</a></li>
+          <li><a href="#true_bugs">🐞 True bugs</a></li>
+          <li><a href="#butterflies_moths">🦋 Butterflies and moths</a></li>
+          <li><a href="#flies_mosquitos">🦟 Flies and mosquitos</a></li>
+          <li><a href="#bees_wasps_ants">🐝 Bees, wasps, and ants</a></li>
+          <li><a href="#spiders">🕷️ Spiders</a></li>
         </ul>
       </nav>
       <section>
@@ -119,6 +119,10 @@ Date : 2025 -10-5 -->
       </section>
       <section id="butterflies_moths">
         <h2>Butterflies & Moths (Lepidoptera)</h2>
+        <figure>
+          <img src="butterfly.jpg" alt="A colorful butterfly" width="250" height="180" />
+          <figcaption>A butterfly showing off patterned wings.</figcaption>
+        </figure>
 
         <p>
           Butterflies and moths are some of the most recognizable insects
@@ -149,6 +153,10 @@ Date : 2025 -10-5 -->
       </section>
       <section id="flies_mosquitos">
         <h2>Flies & Mosquitoes (Diptera)</h2>
+        <figure>
+          <img src="mosquito.jpg" alt="A mosquito perched on skin" width="250" height="180" />
+          <figcaption>A mosquito using its piercing mouthpart.</figcaption>
+        </figure>
 
         <p>
           Flies and mosquitoes belong to the order Diptera, meaning “two
@@ -185,6 +193,14 @@ Date : 2025 -10-5 -->
       </section>
       <section id="bees_wasps_ants">
         <h2>Bees, Wasps, Ants (Hymenoptera)</h2>
+        <figure>
+          <img src="bee.jpg" alt="A bee collecting nectar" width="250" height="180" />
+          <figcaption>A bee pollinating a flower.</figcaption>
+        </figure>
+        <figure>
+          <img src="bee.jpg" alt="A bee collecting nectar" width="250" height="180" />
+          <figcaption>A bee pollinating a flower.</figcaption>
+        </figure>
 
         <p>
           Bees, wasps, and ants are a diverse group known for their complex
@@ -215,6 +231,10 @@ Date : 2025 -10-5 -->
       </section>
       <section id="spiders">
         <h2>Spiders (Araneae)</h2>
+        <figure>
+          <img src="spider.jpg" alt="A spider in its web" width="250" height="180" />
+          <figcaption>A spider resting in the center of its web.</figcaption>
+        </figure>
 
         <p>
           Spiders are arachnids, not insects, and are easily distinguished by
