Final Commit - This is the final commit with completed photos and emoji as well and ready to submit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Date : 2025 -10-5 -->
     </header>
     <main>
       <section id="beetles">
-        <h2>Beetles (Coleoptera)</h2>
+        <h2>🪲 Beetles (Coleoptera)</h2>
         <figure>
           <img src="beetle.png" alt="A beetle with hard outer wings" width="250" height="180" />
           <figcaption>A close-up of a beetle showing its protective elytra.</figcaption>
@@ -74,7 +74,7 @@ Date : 2025 -10-5 -->
         </p>
       </section>
       <section id="true_bugs">
-        <h2>True Bugs (Hemiptera)</h2>
+        <h2>🐞 True Bugs (Hemiptera)</h2>
         <figure>
           <img src="true_bug.jpg" alt="A true bug on a plant" width="250" height="180" />
           <figcaption>A true bug displaying its piercing-sucking mouthparts.</figcaption>
@@ -118,7 +118,7 @@ Date : 2025 -10-5 -->
         </p>
       </section>
       <section id="butterflies_moths">
-        <h2>Butterflies & Moths (Lepidoptera)</h2>
+        <h2>🦋 Butterflies & Moths (Lepidoptera)</h2>
         <figure>
           <img src="butterfly.jpg" alt="A colorful butterfly" width="250" height="180" />
           <figcaption>A butterfly showing off patterned wings.</figcaption>
@@ -152,7 +152,7 @@ Date : 2025 -10-5 -->
         </p>
       </section>
       <section id="flies_mosquitos">
-        <h2>Flies & Mosquitoes (Diptera)</h2>
+        <h2>🦟 Flies & Mosquitoes (Diptera)</h2>
         <figure>
           <img src="mosquito.jpg" alt="A mosquito perched on skin" width="250" height="180" />
           <figcaption>A mosquito using its piercing mouthpart.</figcaption>
@@ -192,7 +192,7 @@ Date : 2025 -10-5 -->
         </p>
       </section>
       <section id="bees_wasps_ants">
-        <h2>Bees, Wasps, Ants (Hymenoptera)</h2>
+        <h2>🐝 Bees, Wasps, Ants (Hymenoptera)</h2>
         <figure>
           <img src="bee.jpg" alt="A bee collecting nectar" width="250" height="180" />
           <figcaption>A bee pollinating a flower.</figcaption>
@@ -230,7 +230,7 @@ Date : 2025 -10-5 -->
         </p>
       </section>
       <section id="spiders">
-        <h2>Spiders (Araneae)</h2>
+        <h2>🕷️ Spiders (Araneae)</h2>
         <figure>
           <img src="spider.jpg" alt="A spider in its web" width="250" height="180" />
           <figcaption>A spider resting in the center of its web.</figcaption>
